k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clip
  namespace: clip
spec:
  selector:
    app: clip
  ports:
    - name: http
      port: 80
      targetPort: 3000
